Comicteca/force-app/main/default/objects/Libro__c/Libro__c.object-meta.xml
<CustomObject>
    <label>Libro</label>
    <nameField>
        <label>Nombre de Libro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Libros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>