Comicteca/force-app/main/default/objects/Libro__c/fields/Ano_de_publicacion__c.field-meta.xml
<CustomField>
    <fullName>Ano_de_publicacion__c</fullName>
    <label>Año de Publicación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>