Comicteca/force-app/main/default/objects/Libro__c/fields/Editorial__c.field-meta.xml
<CustomField>
    <fullName>Editorial__c</fullName>
    <label>Editorial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>