Comicteca/force-app/main/default/objects/Libro__c/fields/Numero_de_paginas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_paginas__c</fullName>
    <label>Número de páginas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>